[workspace]
members  = ["solana-hello-world", "solana-client-test", "solana-tx-p2p"]
resolver = "2"

[workspace.package]
version       = "0.0.1"
authors       = []
edition       = "2021"
rust-version  = "1.82"
documentation = "https://docs.rs/"
readme        = "README.md"
homepage      = "https://"
repository    = "https://github.com/"
license-file  = "LICENSE"
publish       = false

[workspace.dependencies]
solana-tx-p2p = { path = "solana-tx-p2p", default-features = false }

# logging / telemetry
opentelemetry      = { version = "0.21", default-features = false }
opentelemetry_sdk  = { version = "0.21", default-features = false }
tracing            = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std"] }

# error handling
snafu     = { version = "0.8", default-features = false, features = ["std"] }
thiserror = { version = "1", default-features = false }

# encoding
base64     = { version = "0.22", default-features = false, features = ["std"] }
serde      = { version = "1", default-features = false, features = ["std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

# async
async-trait  = { version = "0.1", default-features = false }
futures-util = { version = "0.3", default-features = false }
tokio        = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false }

# http / grpc
axum             = { version = "0.6", default-features = false }
http             = { version = "0.2", default-features = false }
hyper            = { version = "0.14", default-features = false }
prost            = { version = "0.12", default-features = false, features = ["std"] }
tonic            = { version = "0.10", default-features = false }
tonic-build      = { version = "0.10", default-features = false }
tonic-reflection = { version = "0.10", default-features = false }
tower            = { version = "0.4", default-features = false }
tower-http       = { version = "0.4", default-features = false }
url              = { version = "2", default-features = false }

# cli
clap          = { version = "4", default-features = false, features = ["std"] }
clap_complete = { version = "4", default-features = false }

# solana
solana-client                          = { version = "2.1.1" }
solana-program                         = { version = "2.1.1" }
solana-program-test                    = { version = "2.1.1" }
solana-sdk                             = { version = "2.1.1" }
solana-transaction-status-client-types = { version = "2.1.1" }

# misc
bytes       = { version = "1.5", default-features = false }
chrono      = { version = "0.4", default-features = false, features = ["std", "serde", "now"] }
humantime   = { version = "2", default-features = false }
lazy_static = { version = "1", default-features = false }
libp2p      = { version = "0.54", default-features = false }
mimalloc    = { version = "0.1", default-features = false, features = ["secure"] }
rand        = { version = "0.8", default-features = false, features = ["std"] }
rand_core   = { version = "0.6", default-features = false }
utoipa      = { version = "5", default-features = false }

[workspace.lints.rust]
absolute_paths_not_starting_with_crate  = "warn"
deprecated_in_future                    = "warn"
elided_lifetimes_in_paths               = "warn"
explicit_outlives_requirements          = "warn"
keyword_idents                          = { level = "warn", priority = -1 }
let_underscore_drop                     = "warn"
macro_use_extern_crate                  = "warn"
meta_variable_misuse                    = "warn"
missing_abi                             = "warn"
non_ascii_idents                        = "warn"
rust_2021_incompatible_closure_captures = "warn"
rust_2021_incompatible_or_patterns      = "warn"
rust_2021_prefixes_incompatible_syntax  = "warn"
rust_2021_prelude_collisions            = "warn"
single_use_lifetimes                    = "warn"
trivial_casts                           = "warn"
trivial_numeric_casts                   = "warn"
unit_bindings                           = "warn"
unsafe_op_in_unsafe_fn                  = "warn"
unused_extern_crates                    = "warn"
unused_import_braces                    = "warn"
unused_lifetimes                        = "warn"
unused_macro_rules                      = "warn"

[workspace.lints.clippy]
all      = "deny"
cargo    = "deny"
nursery  = "deny"
pedantic = "deny"

future_not_send         = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
missing_errors_doc      = { level = "allow", priority = 1 }

[profile.release-lto]
inherits = "release"
lto      = true
strip    = true
