[package]
name    = "rust-peer-to-peer-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

[[bin]]
name = "p2p"
path = "src/main.rs"
doc  = false

[dependencies]
libp2p = { version = "0.54", features = [
  "tcp",
  "tokio",
  "mdns",
  "floodsub",
  "noise",
  "yamux",
  "macros",
] }
log = "0.4"
once_cell = "1.5"
pretty_env_logger = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = [
  "io-util",
  "io-std",
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "fs",
  "time",
] }
