[package]
name          = "solana-hello-world"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = "1.79"
description   = "Solana Hello World Program"
documentation = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
license-file  = { workspace = true }
publish       = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk          = { workspace = true }
tokio               = { workspace = true }
