[package]
name          = "solana-tx-p2p"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
description   = "Transaction-relaying Peer-to-peer Node"
documentation = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
license-file  = { workspace = true }
publish       = { workspace = true }

autobins = false

[[bin]]
name = "solana-tx-p2p"
path = "src/bin/main.rs"
doc  = false

[features]
default = ["backtrace"]

backtrace = ["snafu/backtrace"]

[dependencies]
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
  # `opentelemetry_otlp::TonicExporterBuilder`
  "grpc-tonic",
  # `opentelemetry_otlp::OtlpTracePipeline`
  "trace",
] }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = [
  # `opentelemetry::runtime::Tokio`
  "rt-tokio",
] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  # `tracing_subscriber::fmt::Layer::pretty`
  "ansi",
  # `tracing_subscriber::filter::EnvFilter`
  "env-filter",
  # `tracing_subscriber::fmt`
  "fmt",
  # `tracing_subscriber::fmt::Layer::json`
  "json",
] }

snafu = { workspace = true }

base64     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

async-trait  = { workspace = true }
futures-util = { workspace = true }
tokio        = { workspace = true, features = ["rt-multi-thread", "tracing", "signal"] }
tokio-stream = { workspace = true, features = ["signal"] }

axum = { workspace = true, features = [
  "headers",
  "http1",
  "http2",
  "json",
  "macros",
  "query",
  "tokio",
  "tower-log",
] }
axum-extra = { workspace = true, features = ["query"] }
http = { workspace = true }
hyper = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["default"] }
tonic = { workspace = true, features = ["gzip", "tls"] }
tonic-reflection = { workspace = true }
tonic-types = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
url = { workspace = true }

clap = { workspace = true, features = [
  "color",
  "derive",
  "env",
  "error-context",
  "help",
  "suggestions",
  "usage",
  "wrap_help",
] }
clap_complete = { workspace = true }

solana-client = { workspace = true }
solana-sdk    = { workspace = true }

bytes = { workspace = true }
chrono = { workspace = true }
humantime = { workspace = true }
lazy_static = { workspace = true }
libp2p = { workspace = true, features = [
  "tcp",
  "tokio",
  "mdns",
  "floodsub",
  "noise",
  "yamux",
  "macros",
] }
mimalloc = { workspace = true }
rand = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid", "yaml"] }
uuid = { workspace = true, features = ["serde"] }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost", "transport"] }

[lints]
workspace = true
